Fix a layout shift in the nav bar
Basically the logo was shirnking since the content was yet not loaded.
We've fixed it by setting flex-shrink to 0.

Additionally we should just embed the logo into the html.

--- a/hugo/assets/css/header.css
+++ b/hugo/assets/css/header.css
@@ -147,6 +147,7 @@ header {
   transform: rotate(-45deg);
   min-height: var(--header-icons);
   min-width: var(--header-icons);
+  flex-shrink: 0;
 }
 
 nav .toggle {
@@ -156,6 +157,7 @@ nav .toggle {
 nav .logo {
   width: var(--header-icons);
   height: var(--header-icons);
+  flex-shrink: 0;
 }
 
 .color-shceme-toggle {
